Remove link to contact me page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </a>
                 </td>
             </tr>
-            <tr align="center"><td><a href="contact.html"> Contact Me</a></td></tr>
+<!--             <tr align="center"><td><a href="contact.html"> Contact Me</a></td></tr> -->
         </table>
         <p>I have been a developer for 15 years, mostly using Pfx, Wolters Kluwer's proprietary tax development
            language, in my professional role.
