--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Brice's Personal Site</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <table cellspacing="15">
@@ -57,7 +58,7 @@
         </a>
                 </td>
             </tr>
-<!--             <tr align="center"><td><a href="contact.html"> Contact Me</a></td></tr> -->
+<!--            <tr align="center"><td><a href="contact.html"> Contact Me</a></td></tr>-->
         </table>
         <p>I have been a developer for 15 years, mostly using Pfx, Wolters Kluwer's proprietary tax development
            language, in my professional role.
