add class for profile pic

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="middle-container">
             <div class="profile">
-                <img src="https://pbs.twimg.com/profile_images/1550940561330290689/yMIO7R1e_400x400.jpg"
+                <img class="picture" src="https://pbs.twimg.com/profile_images/1550940561330290689/yMIO7R1e_400x400.jpg"
                          alt="brice profile picture">
                 <p>I have been a developer for 15 years, mostly using Pfx, Wolters Kluwer's proprietary tax development
            language, in my professional role.
