remove images subfolder

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     </head>
     <body>
         <div class="top-container">
-            <img class="python" src="images/python.png" alt="python-img">
+            <img class="python" src="python.png" alt="python-img">
             <h1>I'm Brice,</h1>
             <h2 id="subheader">a software developer.</h2>
-            <img class="problem-solving" src="images/solved.png" alt="solved-img" >
-            <img class="volcano" src="images/volcano.png" alt="volcano-img">
+            <img class="problem-solving" src="solved.png" alt="solved-img" >
+            <img class="volcano" src="volcano.png" alt="volcano-img">
         </div>
         <div class="middle-container">
             <div class="profile">
@@ -35,25 +35,25 @@
             <div class="skills">
                 <h2>Skills and Accomplishments</h2>
                 <div class="skill-row">
-                  <img class="images" src="images/developer.png" alt="">
+                  <img class="images" src="developer.png" alt="">
 <!--                  <h3>Software Development</h3>-->
                   <p>Pfx | Python | Code Review | SQL | XML | HTML | CSS</p>
                 </div>
 
                 <div class="skill-row">
-                  <img class="images" src="images/stopwatch.png" alt="">
+                  <img class="images" src="stopwatch.png" alt="">
 <!--                  <h3>Time Management</h3>-->
                   <p>Prioritizing | Task Breakdown | Problem Solving | Focusing | Proactive</p>
                 </div>
 
                 <div class="skill-row">
-                  <img class="images" src="images/critical-thinking.png" alt="">
+                  <img class="images" src="critical-thinking.png" alt="">
 <!--                  <h3>Other</h3>-->
                   <p>Communication | Critical Thinking | Collaboration | Resilience | Adaptability</p>
                 </div>
 
                 <div id="accomplishment-row1">
-                  <img class="images2" src="images/foreign.png" alt="">
+                  <img class="images2" src="foreign.png" alt="">
                   <h3>Deliver Foreign Bank Account Report (FBAR) to Production in 2013 and refactor in 2017</h3>
                   <p>Design, code, and test FBAR filing in ASCII in 2013 and refactor to provide filing in XML in 2017
                      resulting in customer ability to file FBAR from the tax return and comply with requirements for
@@ -61,7 +61,7 @@
                 </div>
 
                 <div id="accomplishment-row2">
-                  <img class="images3" src="images/refactoring.png" alt="">
+                  <img class="images3" src="refactoring.png" alt="">
                   <h3>Refactoring of Schedule K-1 calculation</h3>
                   <p>Analyze, refactor, and test preparation of Form 1065 Schedule K-1 resulting in 30-40% decrease
                      in calculation time for Partnership returns</p>
