need to publish

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <div class="skill-row">
                   <img class="images" src="stopwatch.png" alt="">
 <!--                  <h3>Time Management</h3>-->
+<!--                  <h3>Time Management</h3>-->
                   <p>Prioritizing | Task Breakdown | Problem Solving | Focusing | Proactive</p>
                 </div>
 
